--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <main id="calcContainer" class="flex jc-center">
-        <div id="calculator" class="flex ai-center jc-center">
+    <main class="container flex jc-center">
+        <div class="calculator theme--light flex ai-center jc-center">
             <div id="themeBtn" class="flex ai-center"><span class="flex ai-center jc-center"><ion-icon name="sunny-sharp"></ion-icon></span></div>
             <section class="display flex ai-center"></section>
             <section id="buttons" class="flex">
