--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 
     <main class="container flex jc-center">
         <div class="calculator theme--light flex ai-center jc-center">
-            <div id="themeBtn" class="flex ai-center"><span class="flex ai-center jc-center"><ion-icon name="sunny-sharp"></ion-icon></span></div>
+            <div id="themeBtn" class="button--theme-change flex ai-center"><span class="flex ai-center jc-center"><ion-icon name="sunny-sharp"></ion-icon></span></div>
             <section class="display flex ai-center"></section>
             <section id="buttons" class="flex">
                 <section id="numbersBtnCont" class="flex jc-space-beetwen">
-                    <button class="numberBtn">1</button>
-                    <button class="numberBtn">2</button>
-                    <button class="numberBtn">3</button>
-                    <button class="numberBtn">4</button>
-                    <button class="numberBtn">5</button>
-                    <button class="numberBtn">6</button>
-                    <button class="numberBtn">7</button>
-                    <button class="numberBtn">8</button>
-                    <button class="numberBtn">9</button>
-                    <button id="decimalBtn" class="numberBtn">.</button>
-                    <button id="zeroBtn" class="numberBtn">0</button>
+                    <button class="numberBtn usefulBtn">1</button>
+                    <button class="numberBtn usefulBtn">2</button>
+                    <button class="numberBtn usefulBtn">3</button>
+                    <button class="numberBtn usefulBtn">4</button>
+                    <button class="numberBtn usefulBtn">5</button>
+                    <button class="numberBtn usefulBtn">6</button>
+                    <button class="numberBtn usefulBtn">7</button>
+                    <button class="numberBtn usefulBtn">8</button>
+                    <button class="numberBtn usefulBtn">9</button>
+                    <button id="decimalBtn" class="numberBtn usefulBtn">.</button>
+                    <button id="zeroBtn" class="numberBtn usefulBtn">0</button>
                 </section>
                 <section class="flex" id="operationBtnCont">
-                    <button class="operationBtn" id="plusBtn">+</button>
-                    <button class="operationBtn" id="minusBtn">-</button>
-                    <button class="operationBtn" id="timesBtn">*</button>
-                    <button class="operationBtn" id="divideBtn">/</button>
+                    <button class="operationBtn usefulBtn">+</button>
+                    <button class="operationBtn usefulBtn">-</button>
+                    <button class="operationBtn usefulBtn">*</button>
+                    <button class="operationBtn usefulBtn">/</button>
                 </section>
             </section>
             <section class="flex ai-center jc-space-beetwen" id="functionBtnCont">
@@ -42,6 +42,5 @@
     </main>
     <script src="./js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
